--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="./app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="h-12 bg-orange-900"></div>
+  </body>
 </html>
