--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="./app.js" defer></script>
   </head>
   <body>
-    <div class="h-12 bg-orange-900"></div>
+    <div class="h-12 bg-orange-900">fffff</div>
   </body>
 </html>
