--- a/index.html
+++ b/index.html
@@ -90,81 +90,193 @@
       </div>
       <div class="bargain w-full h-8 bg-[#17696A] flex justify-center"></div>
     </header>
-    <div class="banner w-full flex flex-nowrap overflow-hidden">
-      <div
-        class="absolute top-1/2 left-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
+    <div class="banner">
+      <button
+        class="to_left absolute top-1/2 left-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
       >
         <img src="./images/toLeft.svg" alt="" />
-      </div>
-      <div
-        class="switch_banner_1 relative right-0 w-full flex-shrink-0 bg-cover flex justify-center items-center"
-      >
-        <div class="content -mt-20 h-2/4 w-4/5">
-          <h3 class="text-lg font-bold leading-7">New collection</h3>
-          <h1 class="text-[#1E212C] text-7xl font-black">Menswear 2023</h1>
-          <div class="btns flex gap-4 mt-8">
-            <button
-              class="border-2 text-base font-bold border-[#17696A] bg-[#17696A] text-white hover:text-black hover:bg-transparent transition-all py-3 px-10 rounded-lg"
-            >
-              Shop sale
-            </button>
-            <button
-              class="border-2 text-base font-bold bg-[#17696A] text-white hover:text-black hover:bg-transparent transition-all border-[#17696A] py-3 px-10 rounded-lg"
-            >
-              Shop the menswear
-            </button>
+      </button>
+
+      <div class="wrapper w-full flex gap-0 flex-nowrap overflow-hidden">
+        <div
+          class="switch_banner bg-no-repeat bg-[url('./images/main_bg.png')] relative right-0 w-full flex-shrink-0 bg-cover flex justify-center items-center activated"
+        >
+          <div class="content -mt-20 h-2/4 w-4/5">
+            <h3 class="text-lg font-bold leading-7">New collection</h3>
+            <h1 class="text-[#1E212C] text-7xl font-black">Menswear 2023</h1>
+            <div class="btns flex gap-4 mt-8">
+              <button
+                class="border-2 text-base font-bold border-[#17696A] bg-[#17696A] text-white hover:text-black hover:bg-transparent transition-all py-3 px-10 rounded-lg"
+              >
+                Shop sale
+              </button>
+              <button
+                class="border-2 text-base font-bold bg-[#17696A] text-white hover:text-black hover:bg-transparent transition-all border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop the menswear
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="switch_banner bg-no-repeat bg-[url('./images/bg_1.png')] relative right-0 flex-shrink-0 w-full bg-cover flex justify-center items-center"
+        >
+          <div class="content -mt-20 h-2/4 w-4/5">
+            <h3 class="text-lg font-bold leading-7">Deal of the week</h3>
+            <h1 class="text-[#1E212C] text-7xl font-black w-1/2">
+              Stay Warm With Our New Sweaters
+            </h1>
+            <div class="btns flex gap-4 mt-8">
+              <button
+                class="border-2 text-base font-bold border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop sale
+              </button>
+              <button
+                class="border-2 text-base font-bold text-white bg-[#17696A] border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop the menswear
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="switch_banner bg-no-repeat bg-[url('./images/bg_2.png')] relative right-0 flex-shrink-0 w-full bg-cover flex justify-center items-center"
+        >
+          <div class="content -mt-20 h-2/4 w-4/5">
+            <h3 class="text-lg font-bold leading-7">New collection</h3>
+            <h1 class="text-[#1E212C] text-7xl font-black w-1/2">
+              Shoes & Bags <br />
+              autumn / winter 2020
+            </h1>
+            <div class="btns flex gap-4 mt-8">
+              <button
+                class="border-2 text-base font-bold border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop sale
+              </button>
+              <button
+                class="border-2 text-base font-bold text-white bg-[#17696A] border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop the menswear
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="switch_banner bg-no-repeat bg-[url('./images/bg_3.png')] relative right-0 flex-shrink-0 w-full bg-cover flex justify-center items-center"
+        >
+          <div class="content -mt-20 h-2/4 w-4/5">
+            <h3 class="text-lg font-bold leading-7">New collection</h3>
+            <h1 class="text-[#1E212C] text-7xl font-black w-1/2">
+              Shoes & Bags <br />
+              autumn / winter 2020
+            </h1>
+            <div class="btns flex gap-4 mt-8">
+              <button
+                class="border-2 text-base font-bold border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop sale
+              </button>
+              <button
+                class="border-2 text-base font-bold text-white bg-[#17696A] border-[#17696A] py-3 px-10 rounded-lg"
+              >
+                Shop the menswear
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div
-        class="switch_banner_2 relative right-0 flex-shrink-0 w-full bg-cover flex justify-center items-center"
-      >
-        <div class="content -mt-20 h-2/4 w-4/5">
-          <h3 class="text-lg font-bold leading-7">New collection</h3>
-          <h1 class="text-[#1E212C] text-7xl font-black">Menswear 2020</h1>
-          <div class="btns flex gap-4 mt-8">
-            <button
-              class="border-2 text-base font-bold border-[#17696A] py-3 px-10 rounded-lg"
-            >
-              Shop sale
-            </button>
-            <button
-              class="border-2 text-base font-bold text-white bg-[#17696A] border-[#17696A] py-3 px-10 rounded-lg"
-            >
-              Shop the menswear
-            </button>
-          </div>
-        </div>
-      </div>
-      <div
+      <!--SWITCHERS-->
+      <!--<div
         class="w-4/5 switcher_stripe absolute flex gap-2 text-[#424551] text-3xl font-bold"
       >
         <button
+          id="switch_1"
           class="text-left border-b-2 border-[#424551] border-opacity-100 opacity-100 w-36"
         >
           01
         </button>
         <button
+          id="switch_2"
           class="text-left border-b-2 border-[#424551] border-opacity-60 opacity-60 w-36"
         >
           02
         </button>
         <button
+          id="switch_3"
           class="text-left border-b-2 border-[#424551] border-opacity-60 opacity-60 w-36"
         >
           03
         </button>
         <button
+          id="switch_4"
           class="text-left border-b-2 border-[#424551] border-opacity-60 opacity-60 w-36"
         >
           04
         </button>
-      </div>
-      <div
-        class="absolute top-1/2 right-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
+      </div>-->
+
+      <button
+        class="to_right absolute top-1/2 right-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
       >
         <img src="./images/toRight.svg" alt="" />
-      </div>
+      </button>
     </div>
+    <section class="deps -top-20 relative w-full flex justify-center py-5">
+      <div
+        class="container font-normal w-4/5 gap-24 flex justify-between items-center text-sm"
+      >
+        <div
+          class="flex-grow relative hover:scale-110 hover:shadow-sm transition-all"
+        >
+          <div class="mar"></div>
+          <a href=""
+            ><div class="bg bg-[url('./images/woman_model.png')]"></div
+          ></a>
+          <div
+            class="absolute w-full text-center py-1 top-full font-bold text-xl text-gray-800"
+          >
+            <a href="#">Women’s</a>
+          </div>
+        </div>
+        <div
+          class="flex-grow relative hover:scale-110 hover:shadow-sm transition-all"
+        >
+          <div class="mar"></div>
+          <a href="#"
+            ><div class="bg bg-[url('./images/men_model.png')]"></div>
+          </a>
+
+          <div
+            class="absolute w-full text-center py-1 top-full font-bold text-xl text-gray-800"
+          >
+            <a href="#">Men’s</a>
+          </div>
+        </div>
+        <div
+          class="flex-grow relative hover:scale-110 hover:shadow-sm transition-all"
+        >
+          <div class="mar"></div>
+          <a href="">
+            <div class="bg bg-[url('./images/kid_model.png')]"></div>
+          </a>
+          <div
+            class="absolute w-full text-center py-1 top-full font-bold text-xl text-gray-800"
+          >
+            <a href="#">Kids’</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="new_arrivals text-center mt-28">
+      <h3 class="font-bold text-gray-900 text-5xl">New arrivals</h3>
+      <p class="text-gray-700 text-lg mt-6">
+        Check out our latest arrivals for the upcoming season
+      </p>
+      <a href="#" class="text-[#17696A] border-b-2 border-[#17696A]"
+        >See the collection here</a
+      >
+    </section>
   </body>
 </html>
