smoothscroll, activated class, btns changinopacity

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       </div>
       <div class="bargain w-full h-8 bg-[#17696A] flex justify-center"></div>
     </header>
-    <div class="banner">
+    <div class="banner relative">
       <button
-        class="to_left absolute top-1/2 left-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
+        class="to_left absolute top-1/2 left-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-30 rounded-full"
       >
         <img src="./images/toLeft.svg" alt="" />
       </button>
@@ -104,9 +104,9 @@
           <div class="content -mt-20 h-2/4 w-4/5">
             <h3 class="text-lg font-bold leading-7">New collection</h3>
             <h1 class="text-[#1E212C] text-7xl font-black">Menswear 2023</h1>
-            <div class="btns flex gap-4 mt-8">
+            <div class="btns flex gap-4 mt-[105px]">
               <button
-                class="border-2 text-base font-bold border-[#17696A] bg-[#17696A] text-white hover:text-black hover:bg-transparent transition-all py-3 px-10 rounded-lg"
+                class="border-2 text-base font-bold border-[#17696A] hover:text-black hover:bg-transparent transition-all py-3 px-10 rounded-lg"
               >
                 Shop sale
               </button>
@@ -218,7 +218,7 @@
       </div>-->
 
       <button
-        class="to_right absolute top-1/2 right-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-50 rounded-full"
+        class="to_right absolute top-1/2 right-10 z-10 flex justify-center items-center w-10 h-10 bg-white opacity-90 rounded-full"
       >
         <img src="./images/toRight.svg" alt="" />
       </button>
@@ -269,7 +269,7 @@
         </div>
       </div>
     </section>
-    <section class="new_arrivals text-center mt-28">
+    <section class="new_arrivals text-center mt-28 h-[60vh]">
       <h3 class="font-bold text-gray-900 text-5xl">New arrivals</h3>
       <p class="text-gray-700 text-lg mt-6">
         Check out our latest arrivals for the upcoming season
@@ -277,6 +277,10 @@
       <a href="#" class="text-[#17696A] border-b-2 border-[#17696A]"
         >See the collection here</a
       >
+    </section>
+
+    <section class="w-full mx-8 banners flex flex-wrap">
+      <div class="bg-[url(./images/bg_3.png)] w-1/3 h-96"></div>
     </section>
   </body>
 </html>
