--- a/images/index.html
+++ b/images/index.html
@@ -380,27 +380,10 @@
         </form>
       </div>
     </section>
-    <div class="w-4/5 mx-auto mt-44">
-      <h1 class="font-black text-5xl text-center mb-16">Popular categories</h1>
-      <div class="flex w-full justify-center gap-8">
-        <div
-          class="bg-[url(./images/Tops.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
-        <div
-          class="bg-[url(./images/T-shirts.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
-        <div
-          class="bg-[url(./images/Sandals.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
-        <div
-          class="bg-[url(./images/Jackets.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
-        <div
-          class="bg-[url(./images/Caps.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
-        <div
-          class="bg-[url(./images/Coats.png)] w-40 h-40 bg-cover bg-center rounded-full"
-        ></div>
+    <div class="w-fit mx-auto mt-44">
+      <h1 class="font-black text-5xl">Popular categories</h1>
+      <div class="flex">
+        <div class=""></div>
       </div>
     </div>
   </body>
